--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "Testing Sprint Challenge",
 	"main": "index.js",
 	"scripts": {
-		"test": "jest --watch --verbose",
+		"test": "cross-env DB_ENV=testing jest --watch",
 		"start": "nodemon index.js"
 	},
 	"repository": {
@@ -26,6 +26,7 @@
 		"sqlite3": "^4.0.9"
 	},
 	"devDependencies": {
+		"cross-env": "^5.2.0",
 		"jest": "^23.6.0",
 		"supertest": "^3.3.0"
 	}
